Fix font styling on Safari

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,6 +4,7 @@ html{
 
 body {
   font-family: "Poppins", sans-serif;
+  font-synthesis: none;
 }
 
 .badge {
